# PoC-Devin

./: .gitignore  DOCUMENTATION.md  README.md  agents.md  docker-compose.yml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/adapters/: __init__.py
backend/app/adapters/inbound/: __init__.py
backend/app/adapters/inbound/http/: __init__.py
backend/app/adapters/inbound/http/dependencies/: __init__.py  auth.py  container.py
backend/app/adapters/inbound/http/routers/: __init__.py  auth_router.py  health_router.py  users_router.py
backend/app/adapters/outbound/: __init__.py
backend/app/adapters/outbound/db/: __init__.py  mongo_client.py  user_repository_impl.py
backend/app/adapters/outbound/kyc/: __init__.py  kyc_client_impl.py
backend/app/adapters/outbound/messaging/: __init__.py
backend/app/adapters/outbound/security/: __init__.py  password_hasher_impl.py  token_provider_impl.py
backend/app/application/: __init__.py
backend/app/application/dtos/: __init__.py  login_user_dto.py  register_user_dto.py  user_profile_dto.py  verify_mfa_dto.py
backend/app/application/use_cases/: __init__.py  get_user_profile_use_case.py  login_user_use_case.py  register_user_use_case.py  verify_mfa_use_case.py
backend/app/config/: __init__.py  settings.py
backend/app/docs/HUs/: HU-BE-00.md  HU-BE-01.md  HU-BE-02.md  HU-BE-03.md
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  user.py
backend/app/domain/ports/: __init__.py  kyc_verification_port.py  password_hasher_port.py  token_provider_port.py  user_repository.py
backend/app/domain/repositories/: __init__.py  user_repository.py
backend/app/domain/services/: __init__.py  authentication_service.py  mfa_service.py  registration_service.py
backend/app/domain/value_objects/: __init__.py  hashed_password.py  jwt_token.py  phone_number.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/api/: app.py
backend/app/infrastructure/config/: __init__.py
backend/app/infrastructure/persistence/: __init__.py  in_memory_user_repository.py
backend/app/shared/: __init__.py  audit_logger.py
backend/application/ports/: __init__.py
backend/application/use_cases/: __init__.py
backend/docs/: BACKEND-GUIDELINES.md
backend/domain/entities/: __init__.py
backend/domain/value_objects/: __init__.py
backend/infrastructure/api/routes/: __init__.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py
backend/tests/integration/adapters/: __init__.py  test_auth_login_integration.py  test_auth_register_integration.py  test_health_integration.py  test_mongo_repository_real_integration.py  test_repository_integration.py  test_users_me_integration.py
backend/tests/unit/: __init__.py  test_app_factory.py  test_audit_logger.py  test_health.py  test_health_router.py  test_in_memory_user_repository.py  test_mfa_concurrency.py  test_mfa_rate_limiter.py  test_mongo_client.py  test_repository_concurrency.py  test_settings.py  test_token_provider_impl.py
backend/tests/unit/application/: __init__.py  test_auth_dependency.py  test_get_user_profile_use_case.py  test_login_user_use_case.py  test_register_user_use_case.py  test_verify_mfa_use_case.py
backend/tests/unit/domain/: __init__.py  test_authentication_service.py  test_hashed_password.py  test_jwt_token.py  test_kyc_verification_port.py  test_mfa_service.py  test_password_hasher.py  test_phone_number.py  test_registration_service.py  test_token_provider_port.py  test_user_entity.py  test_user_repository_port.py
frontend/: .env.local.example  .eslintignore  .eslintrc.json  .mocharc.json  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.nyc_output/: 8d8a2ac7-6d56-4ed2-96b8-b9ce815cf003.json
frontend/.nyc_output/processinfo/: 8d8a2ac7-6d56-4ed2-96b8-b9ce815cf003.json  index.json
frontend/coverage/: coverage-final.json
frontend/coverage/tmp/: coverage-13484-1771357847157-1.json  coverage-22512-1771357842722-0.json
frontend/docs/: FRONTEND-GUIDELINES.md
frontend/docs/HUs/: HU-FE-00.md  HU-FE-01.md  HU-FE-02.md  HU-FE-03.md  HU-FE-04.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/styles/: design-tokens.ts  globals.css
frontend/tests/: setup.ts
frontend/tests/unit/: design-tokens.spec.ts  tailwind-config.spec.ts
(+5 files in other folders)
