[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend con arquitectura hexagonal"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
	{ include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"
black = ">=26.1.0"
mypy = "^1.8.0"
isort = ">=7.0.0"
ruff = ">=0.14.14"
radon = ">=5.2.0"
pytest-cov = ">=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 85

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
