[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend con arquitectura hexagonal - Billetera Virtual PoC"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
	{ include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.128.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
pydantic = ">=2.12.5"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
motor = ">=3.7.1"
argon2-cffi = ">=25.1.0"
PyJWT = {extras = ["crypto"], version = ">=2.10.1"}
httpx = ">=0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"
pytest-cov = ">=7.0.0"
black = ">=26.1.0"
mypy = ">=1.19.1"
isort = ">=7.0.0"
ruff = ">=0.14.14"
radon = ">=5.2.0"
pre-commit = ">=4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85 -v"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/docs/*",
    "app/*/__init__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["motor.*", "bson.*"]
ignore_missing_imports = true
